# Nativo-NFT-farming

./: .gitignore  Cargo.toml  build.sh  devdeploy.sh  migrate.sh  readme.md
neardev/: dev-account  dev-account.env
res/: nativo_nft_staking.wasm
src/: dao.rs  enumeration.rs  internal.rs  lib.rs  metadata.rs  migrate.rs
