[package]
name = "nativo-nft-staking"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
near-sys = "0.2.0"
uint = "0.9.3"

[dependencies.serde_with]
version = "2.0.0"

[dev-dependencies]
near-sys = "0.2.0"
[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true